--- a/ace.html
+++ b/ace.html
@@ -66,7 +66,7 @@
 
 <div class="container">
     <h2>El sabor que amas</h2>
-    <img src="https://via.placeholder.com/800x400" alt="Pollo Campero">
+    <img src="pollo.png" alt="Pollo Campero">
     <p>Disfruta de nuestro pollo crujiente y jugoso, preparado con una receta única y tradicional.</p>
     <p>Visítanos y experimenta la calidad y sabor que nos hace famosos.</p>
 </div>
