--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 </header>
 
 <nav>
-    <a href="galeria.html" class="btn">Galería</a>
-    <a href="proyecto.html" class="btn">Proyectos</a>
+    <a href="pedidos.html" class="btn">Menú de Pedidos</a>
+    <a href="ubicaciones.html" class="btn">Ubicanos</a>
     <a href="contacto.html" class="btn">Contáctanos</a>
 </nav>
 
