--- a/desayunos.html
+++ b/desayunos.html
@@ -49,10 +49,11 @@
 
 <header>
     Desayunos de Pollo Campero
-  <img src="pollo.png">
+
 </header>
 
 <div class="menu-container">
+    <img src="pollo.png" alt="Menú Pollo Campero" class="menu-img">
     <h2>Elige tu desayuno</h2>
 
     <div class="menu-item">
@@ -89,7 +90,7 @@
         </select>
     </div>
    <div class="menu-item">
-        <img src="desayunopollo.jpeg" alt="Pollo Frito">
+        <img src="desayunopollo.JPG" alt="Pollo Frito">
         <span>Desayuno de Pollo</span>
         <select>
             <option value="1">1 pieza</option>
@@ -99,7 +100,7 @@
            <option value="2">5 piezas</option>
         </select>
     </div>
-
+<a href="index.html" class="order-btn">Finalizar Pedido</a>
 </div>
 
 </body>
