--- a/desayunos.html
+++ b/desayunos.html
@@ -43,6 +43,25 @@
             padding: 5px;
             font-size: 16px;
         }
+        .order-btn {
+            text-decoration: none;
+            color: white;
+            background: linear-gradient(135deg, #d64527, #f4a024);
+            padding: 15px 30px;
+            margin-top: 20px;
+            border-radius: 30px;
+            display: inline-block;
+            font-size: 20px;
+            font-weight: bold;
+            box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.2);
+            transition: 0.3s ease-in-out;
+            border: 2px solid #b52e1f;
+        }
+        .order-btn:hover {
+            background: linear-gradient(135deg, #f4a024, #d64527);
+            transform: scale(1.1);
+            box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
+        }
     </style>
 </head>
 <body>
