--- a/desayunos.html
+++ b/desayunos.html
@@ -79,9 +79,12 @@
         <img src="desayuno.jpeg" alt="Desayunos Típicos">
         <span>Desayuno típico</span>
         <select>
-            <option value="1">1 orden</option>
-            <option value="2">2 ordenes</option>
-            <option value="3">3 ordenes</option>
+            <option value="1">Sin Ordenar</option>
+            <option value="2">1 orden</option>
+            <option value="3">2 ordenes</option>
+            <option value="4">3 ordenes</option>
+            <option value="5">4 ordenes</option>
+           <option value="6">5 ordenes</option>
         </select>
     </div>
 
@@ -89,11 +92,12 @@
         <img src="ranchero.jpg" alt="Desayunos rancheros">
         <span>Desayuno ranchero</span>
         <select>
-            <option value="1">1 orden</option>
-            <option value="2">2 ordenes</option>
-           <option value="2">3 ordenes</option>
-           <option value="2">4 ordenes</option>
-           <option value="2">5 ordenes</option>
+            <option value="1">Sin Ordenar</option>
+            <option value="2">1 orden</option>
+            <option value="3">2 ordenes</option>
+           <option value="4">3 ordenes</option>
+           <option value="5">4 ordenes</option>
+           <option value="6">5 ordenes</option>
         </select>
     </div>
 
@@ -101,22 +105,24 @@
         <img src="panqueque.jpeg" alt="Panqueques">
         <span>Desayuno con Panqueques</span>
         <select>
-            <option value="1">1 orden</option>
-             <option value="2">2 ordenes</option>
-           <option value="2">3 ordenes</option>
-           <option value="2">4 ordenes</option>
-           <option value="2">5 ordenes</option>
+            <option value="1">Sin Ordenar</option>
+            <option value="2">1 orden</option>
+             <option value="3">2 ordenes</option>
+           <option value="4">3 ordenes</option>
+           <option value="5">4 ordenes</option>
+           <option value="6">5 ordenes</option>
         </select>
     </div>
    <div class="menu-item">
         <img src="desayunopollo.JPG" alt="Pollo Frito">
         <span>Desayuno de Pollo</span>
         <select>
-            <option value="1">1 pieza</option>
-             <option value="2">2 piezas</option>
-           <option value="2">3 piezas</option>
-           <option value="2">4 piezas</option>
-           <option value="2">5 piezas</option>
+            <option value="1">Sin Ordenar</option>
+            <option value="2">1 pieza</option>
+             <option value="3">2 piezas</option>
+           <option value="4">3 piezas</option>
+           <option value="5">4 piezas</option>
+           <option value="6">5 piezas</option>
         </select>
     </div>
 <a href="index.html" class="order-btn">Finalizar Pedido</a>
