--- a/desayunos.html
+++ b/desayunos.html
@@ -26,6 +26,13 @@
             border-radius: 10px;
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
         }
+         .menu-img {
+        width: 100%;
+        max-width: 400px; 
+        display: block;
+        margin: 0 auto; 
+        border-radius: 10px; 
+    }
         .menu-item {
             display: flex;
             flex-direction: column;
