--- a/almuerzos.html
+++ b/almuerzos.html
@@ -104,7 +104,7 @@
     </div>
 
     <div class="menu-item">
-        <img src="almuerzo3.jpg" alt="Hamburguesa de pollo">
+        <img src="almuerzo2.jpeg" alt="Hamburguesa de pollo">
         <span>Hamburguesa de pollo con papas fritas y/o Ensalada</span>
         <select>
             <option value="1">Sin Ordenar</option>
@@ -115,7 +115,7 @@
     </div>
 
     <div class="menu-item">
-        <img src="almuerzo4.jpg" alt="Ensalada de pollo">
+        <img src="almuerzo3.jpeg" alt="Ensalada de pollo">
         <span>Ensalada fresca con Pollo</span>
         <select>
             <option value="1">Sin Ordenar</option>
