--- a/almuerzos.html
+++ b/almuerzos.html
@@ -93,7 +93,7 @@
     </div>
 
     <div class="menu-item">
-        <img src="almuerzo2.jpg" alt="Pollo guisado">
+        <img src="almuerzo2.jpg" alt="Pollo Asado">
         <span>Pollo Asado con papas y/o Ensalada</span>
         <select>
             <option value="1">Sin Ordenar</option>
