--- a/almuerzos.html
+++ b/almuerzos.html
@@ -83,7 +83,7 @@
 
     <div class="menu-item">
         <img src="almuerzo1.jpg" alt="Pollo frito con papas">
-        <span>Pollo frito con papas y/o Ensalada</span>
+        <span>Pollo frito</span>
         <select>
             <option value="1">Sin Ordenar</option>
             <option value="2">1 orden</option>
@@ -94,7 +94,7 @@
 
     <div class="menu-item">
         <img src="almuerzo2.jpg" alt="Pollo Asado">
-        <span>Pollo Asado con papas y/o Ensalada</span>
+        <span>Pollo Asado</span>
         <select>
             <option value="1">Sin Ordenar</option>
             <option value="2">1 orden</option>
@@ -104,8 +104,8 @@
     </div>
 
     <div class="menu-item">
-        <img src="almuerzo2.jpeg" alt="Hamburguesa de pollo">
-        <span>Hamburguesa de pollo con papas fritas y/o Ensalada</span>
+        <img src="almuerzo4.JPG" alt="Hamburguesa de pollo">
+        <span>Hamburguesa de pollo </span>
         <select>
             <option value="1">Sin Ordenar</option>
             <option value="2">1 orden</option>
