--- a/almuerzos.html
+++ b/almuerzos.html
@@ -93,7 +93,7 @@
     </div>
 
     <div class="menu-item">
-        <img src="almuerzo2.jpg" alt="Pollo Asado">
+        <img src="almuerzo4.JPG" alt="Pollo Asado">
         <span>Pollo Asado</span>
         <select>
             <option value="1">Sin Ordenar</option>
@@ -104,7 +104,7 @@
     </div>
 
     <div class="menu-item">
-        <img src="almuerzo4.JPG" alt="Hamburguesa de pollo">
+        <img src="almuerzo2.jpeg" alt="Hamburguesa de pollo">
         <span>Hamburguesa de pollo </span>
         <select>
             <option value="1">Sin Ordenar</option>
