--- a/postres.html
+++ b/postres.html
@@ -82,7 +82,7 @@
     <h2>Elige tu postre</h2>
 
     <div class="menu-item">
-        <img src="postre1.jpg" alt="Pastel de tres leches">
+        <img src="postre1.webp" alt="Pastel de tres leches">
         <span>Pastel de Tres Leches</span>
         <select>
             <option value="1">Sin Ordenar</option>
@@ -97,20 +97,20 @@
         <span>Flan de Caramelo</span>
         <select>
             <option value="1">Sin Ordenar</option>
-            <option value="2">1 porción</option>
-            <option value="3">2 porciones</option>
-            <option value="4">3 porciones</option>
+            <option value="2">1 orden</option>
+            <option value="3">2 ordenes</option>
+            <option value="4">3 ordenes</option>
         </select>
     </div>
 
     <div class="menu-item">
         <img src="postre3.jpg" alt="Helado de vainilla">
-        <span>Helado de Vainilla</span>
+        <span>Helado</span>
         <select>
             <option value="1">Sin Ordenar</option>
-            <option value="2">1 porción</option>
-            <option value="3">2 porciones</option>
-            <option value="4">3 porciones</option>
+            <option value="2">1 orden</option>
+            <option value="3">2 ordenes</option>
+            <option value="4">3 ordenes</option>
         </select>
     </div>
 
