--- a/ubicaciones.html
+++ b/ubicaciones.html
@@ -26,11 +26,6 @@
             border-radius: 10px;
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
         }
-        .map {
-            width: 100%;
-            height: 400px;
-            border-radius: 10px;
-        }
         .locations {
             text-align: left;
             margin: 20px auto;
@@ -39,6 +34,11 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+        }
+        .locations a {
+            text-decoration: none;
+            color: #d64527;
+            font-weight: bold;
         }
         .order-btn {
             text-decoration: none;
@@ -69,17 +69,17 @@
 
 <div class="map-container">
     <h2>Encuentra tu restaurante más cercano</h2>
-    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.123456789!2d-90.526!3d14.634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0!2zMFkgMFcgMFkgMFc!5e0!3m2!1ses!2sus!4v1234567890"
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.123456789!2d-90.526!3d14.634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1" 
         allowfullscreen="" loading="lazy"></iframe>
 </div>
 
 <div class="locations">
     <h2>Sucursales destacadas</h2>
     <ul>
-        <li><strong>Zona 10, Guatemala:</strong> Centro Comercial Oakland Mall</li>
-        <li><strong>Zona 5, Guatemala:</strong> Centro Comercial Pradera</li>
-        <li><strong>Antigua Guatemala:</strong> Calle del Arco</li>
-        <li><strong>Villa Nueva:</strong> Metrocentro</li>
+        <li><strong>Zona 10, Guatemala:</strong> <a href="https://goo.gl/maps/XXXXXXX" target="_blank">Ver en Google Maps</a></li>
+        <li><strong>Zona 5, Guatemala:</strong> <a href="https://goo.gl/maps/XXXXXXX" target="_blank">Ver en Google Maps</a></li>
+        <li><strong>Antigua Guatemala:</strong> <a href="https://goo.gl/maps/XXXXXXX" target="_blank">Ver en Google Maps</a></li>
+        <li><strong>Villa Nueva:</strong> <a href="https://goo.gl/maps/XXXXXXX" target="_blank">Ver en Google Maps</a></li>
     </ul>
 </div>
 
