--- a/ubicaciones.html
+++ b/ubicaciones.html
@@ -69,8 +69,8 @@
 
 <div class="map-container">
     <h2>Encuentra tu restaurante más cercano</h2>
-    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.123456789!2d-90.526!3d14.634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0!2zMFkgMFcgMFkgMFc!5e0!3m2!1ses!2sus!4v1234567890"
-        allowfullscreen="" loading="lazy"></iframe>
+    <iframe class="map" src="https://www.google.com/maps/search/Pollo+Campero/@14.625118,-90.5261348,14z/data=!3m1!4b1?hl=es-419&entry=ttu&g_ep=EgoyMDI1MDQzMC4xIKXMDSoASAFQAw%3D%3D"
+        allowfullscreen="" loading="fast"></iframe>
 </div>
 
 <div class="locations">
