--- a/ubicaciones.html
+++ b/ubicaciones.html
@@ -69,8 +69,7 @@
 
 <div class="map-container">
     <h2>Encuentra tu restaurante más cercano</h2>
-    <iframe class="map" src="https://www.google.com/maps/search/Pollo+Campero/@14.625118,-90.5261348,14z/data=!3m1!4b1?hl=es-419&entry=ttu&g_ep=EgoyMDI1MDQzMC4xIKXMDSoASAFQAw%3D%3D"
-        allowfullscreen="" loading="fast"></iframe>
+   <img src="ubicacion.png">
 </div>
 
 <div class="locations">
