--- a/ubicaciones.html
+++ b/ubicaciones.html
@@ -59,6 +59,56 @@
             transform: scale(1.1);
             box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
         }
+        /* Estilos responsivos sin alterar diseño original */
+@media (max-width: 768px) {
+    header {
+        padding: 15px;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    main {
+        max-width: 95%;
+    }
+
+    img {
+        width: 80%;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul li {
+        margin: 5px;
+    }
+
+    nav ul li a {
+        padding: 8px 16px;
+        font-size: 14px;
+    }
+
+    main {
+        max-width: 100%;
+        padding: 15px;
+    }
+
+    img {
+        width: 90%;
+    }
+}
+
     </style>
 </head>
 <body>
